added tests and basic impl for controller on different results of killing attempts